[gd_scene load_steps=10 format=3 uid="uid://ce6hhyfbr036r"]

[ext_resource type="Script" path="res://scripts/scene_2d/slider_area.gd" id="1_xjbxd"]
[ext_resource type="Shader" path="res://scripts/shaders/Block.gdshader" id="2_uw1fh"]
[ext_resource type="Texture2D" uid="uid://5l2edgnwsn1i" path="res://assets/scenes_2d/blocked_tile.png" id="3_e6fhw"]
[ext_resource type="Shader" path="res://scripts/shaders/ScalableArea.gdshader" id="3_qs1jk"]
[ext_resource type="Texture2D" uid="uid://cd4thk6wwhph7" path="res://assets/scenes_2d/slider_body.png" id="4_yil1j"]
[ext_resource type="Texture2D" uid="uid://da0dr8id0tfyg" path="res://assets/scenes_2d/minus_icon.png" id="5_3db0q"]
[ext_resource type="Texture2D" uid="uid://dn0wsqs1myawu" path="res://assets/scenes_2d/full_behavior_icon.png" id="6_woupr"]
[ext_resource type="Texture2D" uid="uid://drxiqhjweubuq" path="res://assets/scenes_2d/slider_outline.png" id="8_hrofw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4iu34"]
resource_local_to_scene = true
shader = ExtResource("3_qs1jk")
shader_parameter/base_color = Color(0.25098, 0.184314, 0.105882, 1)
shader_parameter/is_selected = false
shader_parameter/glow_intensity = 4.0

[node name="ScalableArea" type="Node2D"]
position = Vector2(454, 665)
script = ExtResource("1_xjbxd")
block_texture = ExtResource("3_e6fhw")
block_shader = ExtResource("2_uw1fh")
full_collision = PackedVector2Array(0, -128, 128, 0, 0, 128, -128, 0)
half_collision = PackedVector2Array(0, -128, 0, 128, -128, 0)

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(64, 0)
texture = ExtResource("4_yil1j")

[node name="AreaEffect" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(64, 0)
texture = ExtResource("5_3db0q")

[node name="AreaOutline" type="NinePatchRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_4iu34")
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("8_hrofw")
patch_margin_left = 36
patch_margin_top = 36
patch_margin_right = 36
patch_margin_bottom = 36

[node name="AreaBehavior" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -64)
texture = ExtResource("6_woupr")

[node name="Handle" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(128, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionPolygon2D" parent="Handle"]
unique_name_in_owner = true
polygon = PackedVector2Array(0, -120, 120, 0, 0, 120, -120, 0)

[node name="Ray" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(128, 0)
enabled = false
target_position = Vector2(128, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[connection signal="input_event" from="Handle" to="." method="_on_handle_input_event"]
